# aes67-vsc-2

./: Cargo.toml  Dockerfile  TODO.txt  config.yaml  create-udev-rules.sh  debug.sh  gstlisten.sh  install.sh  run-alsa-debug.sh  run-alsa-release.sh  run-debug.sh  run-playout-debug.sh  run-receiver-debug.sh  run-release.sh  run-vsc-debug.sh  run-vsc-release.sh  update.sh
.github/workflows/: release.yml  test.yml
aes67-jack-vsc/: Cargo.toml
aes67-jack-vsc/config/: receiver-local.yaml  receiver2.yaml  vsc.yaml
aes67-jack-vsc/src/: main.rs  play.rs  record.rs
aes67-rs/: Cargo.toml  README.md
aes67-rs-c/: Cargo.toml  generate-headers.sh
aes67-rs-c/include/: aes67-vsc-2-constants.h  aes67-vsc-2.h
aes67-rs-c/src/: impl.rs  lib.rs
aes67-rs-discovery/: Cargo.toml
aes67-rs-discovery/src/: error.rs  lib.rs  sap.rs
aes67-rs-discovery/src/state_transformers/: available_sessions.rs  mod.rs  sessions.rs
aes67-rs-jack-vsc/: Cargo.toml  README.md
aes67-rs-jack-vsc/config/: receiver-local2.yaml  receiver.yaml  vsc.yaml
aes67-rs-jack-vsc/src/: common.rs  io_handler.rs  lib.rs  main.rs  play.rs  receive.rs  record.rs  send.rs  session_manager.rs  telemetry.rs
aes67-rs-sdp/: Cargo.toml
aes67-rs-sdp/src/: lib.rs
aes67-rs-ui/: Cargo.toml
aes67-rs-ui/src/: config.rs  error.rs  lib.rs
aes67-rs-ui/src/state_transformers/: available_sessions.rs  mod.rs  sessions.rs
aes67-rs-vsc-management-agent/: Cargo.toml  README.md
aes67-rs-vsc-management-agent/src/: config.rs  error.rs  lib.rs  netinf_watcher.rs  rest.rs
aes67-rs-vsc-management-agent/src/state_transformers/: available_sessions.rs  mod.rs  sessions.rs
aes67-rs-vsc-web-ui/: index.html  package-lock.json  package.json  vite.config.ts
aes67-rs-vsc-web-ui/src/: App.css  App.tsx  api.ts  index.tsx  utils.ts  vscState.ts  worterbuch.ts
aes67-rs-vsc-web-ui/src/components/: Indicator.css  Indicator.tsx  RunningIndicator.tsx  Selection.tsx
aes67-rs-vsc-web-ui/src/components/Config/: Config.tsx  JACK.tsx  Network.tsx  VSC.tsx
aes67-rs-vsc-web-ui/src/components/Receivers/: Editor.tsx  Receivers.tsx
aes67-rs-vsc-web-ui/src/components/Senders/: Editor.tsx  Senders.tsx
aes67-rs/examples/: clock.rs  phc.rs
aes67-rs/include/: aes67-vsc-2.h
aes67-rs/src/: app.rs  buffer.rs  c.rs  config.rs  discovery.rs  error.rs  formats.rs  lib.rs  monitoring.rs  nic.rs  receiver.rs  sender.rs  serde.rs  socket.rs  telemetry.rs  time.rs  utils.rs  vsc.rs  worterbuch.rs
aes67-rs/src/buffer/: mod.rs  receiver.rs  sender.rs
aes67-rs/src/c/: impl.rs  mod.rs
aes67-rs/src/discovery/: mod.rs  sap.rs
aes67-rs/src/monitoring/: health.rs  mod.rs  observability.rs  stats.rs
aes67-rs/src/monitoring/health/: mod.rs  receiver_health.rs
aes67-rs/src/monitoring/stats/: mod.rs  playout_stats.rs  receiver_stats.rs  sender_stats.rs
aes67-rs/src/receiver/: api.rs  config.rs  mod.rs
aes67-rs/src/sender/: api.rs  config.rs  mod.rs
aes67-rs/src/time/: mod.rs  phc.rs  statime.rs
aes67-rs/src/time/statime/: mod.rs  statime_linux.rs
config/: playout.yaml  receiver-local2.yaml  receiver.yaml  receiver2.yaml
include/: aes67-vsc-2.h
linuxptp/: ptp4l.conf
ptp4l-wrapper/: Cargo.toml  dev-set-caps.sh
ptp4l-wrapper/examples/: simple.rs
ptp4l-wrapper/src/: config.rs  error.rs  lib.rs
src/: buffer.rs  c.rs  config.rs  error.rs  formats.rs  lib.rs  main.rs  monitoring.rs  playout.rs  receiver.rs  sender.rs  serde.rs  socket.rs  telemetry.rs  time.rs  utils.rs  vsc.rs  webserver.rs  worterbuch.rs
src/c/: impl.rs
src/monitoring/: health.rs  observability.rs  stats.rs
src/monitoring/stats/: playout_stats.rs  receiver_stats.rs  sender_stats.rs
src/playout/: api.rs  config.rs  jack.rs  webserver.rs
src/playout/jack/: session_manager.rs
src/receiver/: api.rs  config.rs  webserver.rs
src/time/: statime_linux.rs
src/time/statime/: statime_linux.rs
systemd/: aes67-jack-vsc.service  aes67-pipewire-vsc.service  ptp4l@.service
test/: anubis.sdp  api-receiver.rest  avio-bluetooth.sdp  receiver-api.rest  redundant.sdp  single.sdp  test.rest  vsc.sdp
test/alsa-receiver/: .gitignore  Makefile  alsa-receiver.c
tosub/: Cargo.toml
tosub/src/: lib.rs
udev/: 99-cpu-dma-latency.rules  99-ptp.rules
web-frontend/: index.html  package-lock.json  package.json  vite.config.ts
web-frontend/src/: App.css  App.tsx  vscState.ts  worterbuch.ts
web-frontend/src/components/: Config.tsx  Receivers.tsx  Senders.tsx
