[workspace]
members = [
    "aes67-rs-jack-vsc",
    "aes67-rs",
    "aes67-rs-vsc-management-agent",
    "aes67-rs-discovery",
    "aes67-rs-sdp",
    "aes67-rs-c",
]
resolver = "3"

[patch.crates-io]
aes67-rs = { path = "./aes67-rs" }
aes67-rs-vsc-management-agent = { path = "./aes67-rs-vsc-management-agent" }
aes67-rs-discovery = { path = "./aes67-rs-discovery" }
aes67-rs-sdp = { path = "./aes67-rs-sdp" }

[profile.release]
lto = "fat"
codegen-units = 1
# panic = "abort"
# strip = true
# debug = 0
opt-level = 3
