[workspace]
members = [
    "aes67-rs-jack-vsc",
    "aes67-rs",
    "aes67-rs-vsc-management-agent",
    "aes67-rs-discovery",
    "aes67-rs-sdp",
    "aes67-rs-c",
    "ptp4l-wrapper",
]
resolver = "3"

[workspace.dependencies]
# Workspace-internal crates
aes67-rs = { version = "0.1.0", path = "aes67-rs" }
aes67-rs-discovery = { version = "0.1.0", path = "aes67-rs-discovery" }
aes67-rs-sdp = { version = "0.1.0", path = "aes67-rs-sdp" }
aes67-rs-vsc-management-agent = { version = "0.1.0", path = "aes67-rs-vsc-management-agent" }

# External dependencies
axum = { version = "0.8.9", features = ["http2", "ws", "macros"] }
axum-server = "0.8.0"
chrono = "0.4.41"
clap = { version = "4.6.1", features = ["derive", "env"] }
clock-steering = "0.2.1"
console-subscriber = "0.5.0"
crossbeam = "0.8.4"
dashmap = "6.1.0"
directories = "6.0.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
futures-lite = "2.6.1"
gethostname = "1.0.0"
hex = "0.4.3"
jack = "0.13.5"
lazy_static = "1.5.0"
libc = "0.2.186"
miette = "7.6.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry-resource-detectors = "0.10.0"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = "0.31.0"
pin-project-lite = "0.2.16"
pnet = "0.35.0"
rand = { version = "0.10.1", default-features = false }
regex = "1.11.2"
reqwest = "0.13.3"
rtp-rs = "0.6.0"
safer-ffi = "0.1.13"
sap-rs = "0.9.0"
scopeguard = "1.2.0"
sdp = "0.17.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_millis = "0.1.1"
serde_yaml = "0.9.34"
socket2 = "0.6.0"
statime = "0.4.0"
statime-linux = "0.4.0"
supports-color = "3.0.2"
thiserror = "2.0.18"
thread-priority = "3.0.0"
timerfd = "1.6.0"
timestamped-socket = "0.2.8"
tokio = "1.52.3"
tokio-metrics = "0.5.0"
tosub = "1.1.3"
tower-http = { version = "0.6.10", features = ["trace"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
worterbuch = { version = "1.5.0-rc.7", default-features = false }
worterbuch-client = "1.5.0-rc.7"

[patch.crates-io]
aes67-rs = { path = "./aes67-rs" }
aes67-rs-vsc-management-agent = { path = "./aes67-rs-vsc-management-agent" }
aes67-rs-discovery = { path = "./aes67-rs-discovery" }
aes67-rs-sdp = { path = "./aes67-rs-sdp" }

[profile.release]
lto = "fat"
codegen-units = 1
# panic = "abort"
# strip = true
# debug = 0
opt-level = 3
