[package]
name = "aes67-rs-c"
version = "0.1.0"
edition = "2024"

[dependencies]
aes67-rs = { workspace = true }
aes67-rs-sdp = { workspace = true }
dashmap = { workspace = true }
futures-lite = { workspace = true }
lazy_static = { workspace = true }
safer-ffi = { workspace = true }
sdp = { workspace = true }
tosub = { workspace = true }
tracing = { workspace = true }
worterbuch-client = { workspace = true }

[features]
headers = ["safer-ffi/headers"]

[[bin]]
name = "generate-headers"
required-features = ["headers"] # Do not build unless generating headers.
