[package]
name = "aes67-rs-discovery"
version = "0.1.0"
edition = "2024"

[dependencies]
aes67-rs = { version = "0.1.0", path = "../aes67-rs" }
aes67-rs-sdp = { version = "0.1.0", path = "../aes67-rs-sdp" }
miette = "7.6.0"
sap-rs = "0.4.0"
serde = "1.0.228"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-graceful-shutdown = { version = "0.19.2", features = ["tracing"] }
tokio-util = "0.7.17"
tracing = "0.1.43"
worterbuch-client = { version = "1.4.0-rc.9" }
