[package]
name = "aes67-rs-discovery"
version = "0.1.0"
edition = "2024"

[dependencies]
aes67-rs = { version = "0.1.0", path = "../aes67-rs" }
aes67-rs-sdp = { version = "0.1.0", path = "../aes67-rs-sdp" }
miette = "7.6.0"
sap-rs = { path = "../../sap-rs" }
sdp = "0.10.0"
serde = "1.0.228"
thiserror = "2.0.17"
tokio = "1.48.0"
tosub = "1.0.0-rc.2"
tracing = "0.1.43"
worterbuch-client = "1.5.0-alpha.2"
