[package]
name = "aes67-rs-discovery"
version = "0.1.0"
edition = "2024"

[dependencies]
aes67-rs = { workspace = true }
aes67-rs-sdp = { workspace = true }
miette = { workspace = true }
sap-rs = { workspace = true }
sdp = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tosub = { workspace = true }
tracing = { workspace = true }
worterbuch-client = { workspace = true }
