[package]
name = "aes67-rs-jack-vsc"
version = "0.1.0"
edition = "2024"

[dependencies]
aes67-rs = { path = "../aes67-rs" }
aes67-rs-discovery = { version = "0.1.0", path = "../aes67-rs-discovery" }
aes67-rs-vsc-management-agent = { path = "../aes67-rs-vsc-management-agent" }
console-subscriber = { version = "0.4.1", optional = true }
directories = "6.0.0"
dirs = "6.0.0"
futures-lite = "2.6.1"
jack = "0.13.3"
lazy_static = "1.5.0"
miette = { version = "7.6.0", features = ["fancy"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry-resource-detectors = "0.10.0"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = "0.31.0"
rand = "0.9.2"
serde = "1.0.219"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
supports-color = "3.0.2"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tokio-graceful-shutdown = { version = "0.19.0", features = ["tracing"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
worterbuch = { version = "1.4.0-rc.9" }
worterbuch-client = { version = "1.4.0-rc.9" }

[features]
tokio-console = ["console-subscriber"]
jemalloc = ["worterbuch/jemalloc"]
tokio-metrics = [
    "aes67-rs/tokio-metrics",
    "aes67-rs-vsc-management-agent/tokio-metrics",
]
default = ["jemalloc"]
