[package]
name = "aes67-rs-jack-vsc"
version = "0.1.0"
edition = "2024"
default-run = "aes67-rs-jack-vsc"

[dependencies]
aes67-rs = { workspace = true }
aes67-rs-discovery = { workspace = true }
aes67-rs-vsc-management-agent = { workspace = true }
console-subscriber = { workspace = true, optional = true }
directories = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
futures-lite = { workspace = true }
jack = { workspace = true }
lazy_static = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-resource-detectors = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tosub = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
worterbuch = { workspace = true }
worterbuch-client = { workspace = true }

[features]
tokio-console = ["console-subscriber"]
tokio-metrics = [
    "aes67-rs/tokio-metrics",
    "aes67-rs-vsc-management-agent/tokio-metrics",
]
default = []
