[package]
name = "aes67-rs-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
aes67-rs = { path = "../aes67-rs" }
axum = { version = "0.8.6", features = ["http2", "ws"] }
axum-server = "0.7.2"
dirs = "6.0.0"
miette = "7.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = "1.47.1"
tokio-graceful-shutdown = { version = "0.18.0", features = ["tracing"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
worterbuch = { version = "1.4.0-rc.2" }
worterbuch-client = { version = "1.4.0-rc.2" }

[features]
tokio-metrics = []
default = []
