[package]
name = "aes67-rs-vsc-management-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
aes67-rs = { version = "0.1.0", path = "../aes67-rs" }
aes67-rs-discovery = { version = "0.1.0", path = "../aes67-rs-discovery" }
axum = { version = "0.8.6", features = ["http2", "ws"] }
axum-server = "0.7.2"
dirs = "6.0.0"
miette = "7.6.0"
sdp = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = "1.47.1"
tokio-graceful-shutdown = { version = "0.19.0", features = ["tracing"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
worterbuch = { version = "1.4.0-rc.9" }
worterbuch-client = { version = "1.4.0-rc.9" }

[features]
tokio-metrics = []
default = []
