[package]
name = "aes67-rs-vsc-management-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
aes67-rs = { version = "0.1.0", path = "../aes67-rs" }
aes67-rs-discovery = { version = "0.1.0", path = "../aes67-rs-discovery" }
axum = { version = "0.8.6", features = ["http2", "ws", "macros"] }
axum-server = "0.7.2"
directories = "6.0.0"
dirs = "6.0.0"
libc = "0.2"
miette = "7.6.0"
pnet = "0.35.0"
scopeguard = "1.2"
sdp = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = "1.47.1"
tracing = "0.1.41"
worterbuch = { path = "../../../worterbuch/worterbuch/worterbuch" }
worterbuch-client = { path = "../../../worterbuch/worterbuch/worterbuch-client" }
tosub = { version = "0.1.0", path = "../tosub" }

[features]
tokio-metrics = []
default = []
