[package]
name = "aes67-rs-vsc-management-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
aes67-rs = { workspace = true }
aes67-rs-discovery = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
clap = { workspace = true }
libc = { workspace = true }
miette = { workspace = true }
pnet = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
scopeguard = { workspace = true }
sdp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tosub = { workspace = true }
tracing = { workspace = true }
worterbuch = { workspace = true }
worterbuch-client = { workspace = true }

[features]
tokio-metrics = []
default = []
