[package]
name = "aes67-rs"
version = "0.1.0"
edition = "2024"
description = "AES67 compatiple RTP stream senders and receivers"
license = "AGPL-3.0-or-later"

[dependencies]
axum = "0.8.1"
chrono = "0.4.41"
clap = { version = "4.5.44", features = ["derive", "env"] }
clock-steering = "0.2.1"
crossbeam = "0.8.4"
dashmap = "6.1.0"
dirs = "6.0.0"
# futures = "0.3.31"
futures-lite = "2.6.1"
gethostname = "1.0.0"
hex = "0.4.3"
lazy_static = "1.5.0"
libc = "0.2.175"
miette = { version = "7.5.0", features = ["fancy"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry-resource-detectors = "0.10.0"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = "0.31.0"
pin-project-lite = "0.2.16"
pnet = "0.35.0"
rand = "0.9.2"
regex = "1.11.2"
reqwest = "0.12.23"
rtp-rs = "0.6.0"
safer-ffi = "0.1.13"
sap-rs = "0.3.0"
sdp = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_millis = "0.1.1"
serde_yaml = "0.9.34"
socket2 = "0.6.0"
statime = { version = "0.2.2", optional = true }
statime-linux = { version = "0.2.2", optional = true }
supports-color = "3.0.2"
thiserror = "2.0.16"
thread-priority = "3.0.0"
timestamped-socket = "0.2.7"
tokio = { version = "1.48.0", features = ["sync", "rt", "macros", "fs"] }
tokio-graceful-shutdown = "0.18.0"
tokio-util = "0.7.16"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
worterbuch-client = { version = "1.3.0", optional = true }

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "generate-headers"
required-features = ["headers"] # Do not build unless generating headers.

[features]
headers = ["safer-ffi/headers"]
c = []
statime = ["dep:statime", "statime-linux"]
worterbuch = ["worterbuch-client"]
default = ["c", "worterbuch"]

[lints.rust]
# unsafe_code = "forbid"

[lints.clippy]
all = "deny"
enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
unwrap_used = "deny"
