[package]
name = "aes67-rs"
version = "0.1.0"
edition = "2024"
description = "AES67 compatiple RTP stream senders and receivers"
license = "AGPL-3.0-or-later"

[dependencies]
aes67-rs-sdp = { version = "0.1.0", path = "../aes67-rs-sdp" }
axum = "0.8.1"
chrono = "0.4.41"
clap = { version = "4.5.44", features = ["derive", "env"] }
clock-steering = "0.2.1"
crossbeam = "0.8.4"
dashmap = "6.1.0"
futures-lite = "2.6.1"
gethostname = "1.0.0"
hex = "0.4.3"
lazy_static = "1.5.0"
libc = "0.2.175"
miette = "7.6.0"
pin-project-lite = "0.2.16"
pnet = "0.35.0"
rand = { version = "0.8.5", default-features = false, features = [
    "std",
    "std_rng",
] }
regex = "1.11.2"
reqwest = "0.13.1"
rtp-rs = "0.6.0"
sdp = "0.17.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_millis = "0.1.1"
serde_yaml = "0.9.34"
socket2 = "0.6.0"
statime = { version = "0.4.0", optional = true }
statime-linux = { version = "0.4.0", optional = true }
thiserror = "2.0.16"
thread-priority = "3.0.0"
timestamped-socket = "0.2.7"
tokio = { version = "1.48.0", features = ["sync", "rt", "macros", "fs"] }
tokio-metrics = { version = "0.4.5", optional = true }
tosub = "1.0.0"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
worterbuch-client = { version = "1.5.0-rc.1", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
supports-color = "3.0.2"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[features]
statime = ["dep:statime", "statime-linux"]
worterbuch = ["worterbuch-client"]
tokio-metrics = ["dep:tokio-metrics"]
default = ["worterbuch", "statime"]

[lints.rust]
# unsafe_code = "forbid"

[lints.clippy]
all = "deny"
enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
unwrap_used = "deny"
