[package]
name = "aes67-rs"
version = "0.1.0"
edition = "2024"
description = "AES67 compatiple RTP stream senders and receivers"
license = "AGPL-3.0-or-later"

[dependencies]
aes67-rs-sdp = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clock-steering = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
futures-lite = { workspace = true }
gethostname = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
miette = { workspace = true }
pin-project-lite = { workspace = true }
pnet = { workspace = true }
# statime-linux has a dependency on 0.8.5 so we can't use the workspace version here
rand = { version = "0.8.5", default-features = false, features = [
    "std",
    "std_rng",
] }
regex = { workspace = true }
reqwest = { workspace = true }
rtp-rs = { workspace = true }
sdp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_millis = { workspace = true }
serde_yaml = { workspace = true }
socket2 = { workspace = true }
statime = { workspace = true, optional = true }
statime-linux = { workspace = true, optional = true }
thiserror = { workspace = true }
thread-priority = { workspace = true }
timerfd = { workspace = true }
timestamped-socket = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "fs"] }
tokio-metrics = { workspace = true, optional = true }
tosub = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
worterbuch-client = { workspace = true, optional = true }

[dev-dependencies]
supports-color = { workspace = true }
tracing-subscriber = { workspace = true }

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[features]
statime = ["dep:statime", "statime-linux"]
worterbuch = ["worterbuch-client"]
tokio-metrics = ["dep:tokio-metrics"]
default = ["worterbuch", "statime"]

[lints.rust]
# unsafe_code = "forbid"

[lints.clippy]
# all = "deny"
# enum_glob_use = "deny"
# unwrap_used = "deny"
