[package]
name = "ptp4l-wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = { workspace = true }
miette = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "process"] }
tosub = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
