[package]
name = "tosub"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-util = "0.7.18"
tokio = { version = "1.49.0", features = ["rt", "time", "signal"] }
tracing = "0.1.44"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
miette = { version = "7.6.0", features = ["fancy"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
